# sfml-playground

./: .gitignore  CMakeLists.txt  catrpg.sln  catrpg.vcxproj  catrpg.vcxproj.filters
src/: main.cpp  player.cpp  player.h
src/animation/: animation.cpp  animation.h
src/asyncTasks/: parallelTask.cpp  parallelTask.h
src/command/: CommandQueue.cpp  CommandQueue.h  command.cpp  command.h
src/entity/: dataTables.cpp  dataTables.h  entity.cpp  entity.h
src/game/: spriteNode.cpp  spriteNode.h
src/gui/: button.cpp  button.h  component.cpp  component.h  container.cpp  container.h  label.cpp  label.h
src/helpers/: utility.cpp  utility.h
src/objects/: aircraft.cpp  aircraft.h  categories.h  emitterNode.cpp  emitterNode.h  particle.h  particleNode.cpp  particleNode.h  pickup.cpp  pickup.h  projectile.cpp  projectile.h
src/resources/: resourceHolder.hpp  resourceHolder.inl  resourceIdentifiers.hpp
src/scene/: sceneNode.cpp  sceneNode.h  textNode.cpp  textNode.h  world.cpp  world.h
src/shaders/: BloomEffect.cpp  BloomEffect.h  PostEffect.cpp  PostEffect.h
src/stateArchitecture/: application.cpp  application.h  state.cpp  state.h  stateIdentifiers.h  stateStack.cpp  stateStack.h
src/states/: gameOverState.cpp  gameOverState.h  gameState.cpp  gameState.h  loadingState.cpp  loadingState.h  menuState.cpp  menuState.h  pauseState.cpp  pauseState.h  settingState.cpp  settingState.h  titleState.cpp  titleState.h
